apps/40-network/mail-gateway/overlays/prod/resources-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-gateway
spec:
  template:
    spec:
      containers:
        - name: mail-gateway
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 20m
              memory: 128Mi
